--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="#">Conviértete en orador</a>    
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-verde" href="#">Comprar tickets</a>
+                            <a class="nav-link link-verde" href="./nuevohtml/ticket.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
                 </p>
                 <div>
                     <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="btn btn-success" onclick="location.href='ticket.html' " >
                         Comprar tickets
                     </button>
                 </div>
