--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </p>
                 <div>
                     <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success" onclick="location.href='ticket.html' " >
+                    <button type="button" class="btn btn-success" onclick="location.href='nuevohtml/ticket.html' " >
                         Comprar tickets
                     </button>
                 </div>
